--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ header p{
     width: 100%;
     padding-right: 10px;
     padding-left: 10px;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
 }
 
 nav{
